--- a/cp/notes.tex
+++ b/cp/notes.tex
@@ -482,6 +482,30 @@ The following tasks can be done in O(1) space with singly linked lists:
     \item Reversing the list.
     \item Hare and Turtle ??? TODO
 \end{enumerate}
+\subsection{Moore's Majority Voting}
+\begin{itemize}
+\item It returns the element occuring $>$ floor(n/2) times in an array of size n, in linear time.
+\item A second pass can be used to ensure that count of the element returned is > floor(n/2), if its existence is not guarranteed.
+\item In more complicated frequency questions, prefer going by the usual frequency map approach first.
+\item Proof of correctness can be done inductively.
+\end{itemize}
+\begin{lstlisting}
+vector<int> a;
+int el, count=0;
+for(int i=0;i<a.size();i++){
+    if(count==0){
+        el = a[i];
+        count = 1;
+    }
+    else{
+        if(a[i]==el){count++;}
+        else{count--;}
+    }
+}
+//Additionally to a second pass to ensure a majority element exists.
+return el;
+\end{lstlisting}
+
 \section*{Misc. Notes}
 \subsection*{Precision printing}
 \begin{lstlisting}
