--- a/cp/notes.tex
+++ b/cp/notes.tex
@@ -482,13 +482,12 @@ The following tasks can be done in O(1) space with singly linked lists:
     \item Reversing the list.
     \item Hare and Turtle ??? TODO
 \end{enumerate}
-\subsection{Moore's Majority Voting}
+\subsection{Boyer-Moore Majority Voting}
 \begin{itemize}
 \item It returns the element occuring $>$ floor(n/2) times in an array of size n, in linear time.
 \item A second pass can be used to ensure that count of the element returned is > floor(n/2), if its existence is not guarranteed.
 \item In more complicated frequency questions, prefer going by the usual frequency map approach first.
 \item Proof of correctness can be done inductively.
-\end{itemize}
 \begin{lstlisting}
 vector<int> a;
 int el, count=0;
@@ -496,7 +495,7 @@ for(int i=0;i<a.size();i++){
     if(count==0){
         el = a[i];
         count = 1;
-    }
+        }
     else{
         if(a[i]==el){count++;}
         else{count--;}
@@ -505,7 +504,53 @@ for(int i=0;i<a.size();i++){
 //Additionally to a second pass to ensure a majority element exists.
 return el;
 \end{lstlisting}
-
+\item There also exists a version for finding elements with frequency > floor(n/k);
+\begin{lstlisting}
+vector<int> a;
+int thres = n/k;
+map<int,int> votes;
+for(int i=0;i<a.size();i++){
+    if(votes.count(a[i])){
+        votes[a[i]]+=1;//use the optimized iterator version instead.
+    }
+    else{
+        if(votes.size() < k-1){
+            votes[a[i]] = 1;
+        }
+        else{
+            bool used = false;
+            for(auto entry:votes){
+                if(entry.second==0){
+                    votes.erase(entry.first);
+                    votes[a[i]] = 1;
+                    used = true;
+                    break;
+                }
+            }
+            if(!used){
+                for(auto iter=votes.begin();iter!=votes.end();iter++){
+                    iter->second -= 1;
+                }
+            }
+        }
+    }
+}
+for(auto entry:votes){
+    entry.second = 0;
+}
+vector<int> ans;
+for(int v:ans){
+    if(entry.count(v)){
+        entry[v] +=1;
+    }
+}
+//Note that above loop takes O(n(logk))
+//Last frequency check:
+for(auto entry:votes){
+    if(entry.second > thres){ans.push_back(entry.first);}
+}
+\end{lstlisting} 
+\end{itemize}
 \section*{Misc. Notes}
 \subsection*{Precision printing}
 \begin{lstlisting}
