--- a/cp/notes.tex
+++ b/cp/notes.tex
@@ -415,6 +415,9 @@ The binary search algorithm is:
 Splitting a linear range up into buckets of size $\sqrt{n}$, and maintaining
 necessary values (min, max, etc.) can help reduce time complexites from O(n)
 to O($\sqrt{n}$).
+\subsection{Split into subarrays}
+The problem can be solved if the given array can be split into non-overlapping contiguous subarrays satisfying a given property.
+TODO explain some more. 
 \subsection{Array Scan}
 The name is given to the family of algorithms where we do a couple of runs of a given array to evaluate an attribute. Approaches involving subarrays can be dealt with using to two indices \texttt{s} and \texttt{e}. Things to note:
 \begin{itemize}
